--- a/index.html
+++ b/index.html
@@ -7,13 +7,16 @@
   <title>CALCULAR IMC</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
 </head>
 
 <body>
   <header>
     <h1 class="text-center">Calculadora IMC</h1>
   </header>
-  <main class="container mt-5">
+  <div class="container mt-5">
     <div class="calc">
       <label for="altura">Sua altura (em centímetros):</label>
       <input type="number" name="altura" id="altura" class="form-control" placeholder="Ex: 182" required>
@@ -29,7 +32,7 @@
         <div id="resultado-imagem"></div>
       </div>
     </div>
-  </main>
+  </div>
 
   <script>
     const imagensResultados = {
